# LabProgrammazione

./: CMakeLists.txt  Chat.cpp  Chat.h  Message.cpp  Message.h  MessageAlert.cpp  MessageAlert.h  Observer.h  Subject.h  UnreadMessagesAlert.cpp  UnreadMessagesAlert.h  UpdateTest.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ChatTest.cpp  MessageAlertTest.cpp  MessageTest.cpp  UpdateTest.cpp  UpdateTest.h  UserTest.cpp  runAllTests.cpp
